<resources>
    <string name="app_name">taschengeldapp</string>
    <string name="taschengeldmanager">Pocketmoney manager</string>
    <string name="add_user_button" translatable="false">Button to add a child!</string>
    <string name="title_activity_main2" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string-array name="spinner_currency">
        <item>€</item>
        <item>£</item>
        <item>$</item>
    </string-array>
    <string name="name_of_the_child">Name of the Child</string>
    <string name="name">Name</string>
    <string name="pocket_money">Pocket money</string>
    <string name="setting">Setting</string>
    <string name="add">Add</string>
    <string name="weekly_pay">weekly pay</string>
    <string name="monthly_pay">monthly pay</string>
    <string name="pay">pay</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="no_account_jet">No account jet?</string>
    <string name="login">LOGIN!</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_one">Already have one?</string>
    <string name="money_given">Pocket money paid!</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="lookslike">Looks like you have not added any children yet!
        Do so by clicking the blue plus button!</string>
    <string name="general">General</string>
    <string name="welcomescreen">This is a tutorial to show you the functionality of this app!</string>
    <string name="MainPage">Here you can add new children to your collection and view the ones you already added! </string>
    <string name="Addingachild"> When clicking on the blue plus button you saw on the previous page, you get to this page. Her you specify the settings for your child and add it to your collection!</string>
    <string name="ChildsLog"> When you add transactions, you can View them at this Screen. You get there by clicking on the name of your child on the Main Page!</string>
    <string name="Addingtransaction">Here you can see how adding a transaction works! </string>
    <string name="Letsgetstarted">IMPORTANT: The pocket money you select for your child, gets paid every month/week (depending on what you selected) to your childs account, and you can click the pay button to log that you gave it to your child!</string>
    <string name="Welcome">Welcome…</string>
    <string name="Welcome2">Main Page</string>
    <string name="Welcome3">Adding a child</string>
    <string name="Welcome4">Transaction log</string>
    <string name="Welcome5">Adding a Transaction</string>
    <string name="Welcome6">…Lets get started!</string>

</resources>